Bug 81380 - FILEOPEN: LO crashes while opening the document
Summary: FILEOPEN: LO crashes while opening the document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Dinesh
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-15 10:50 UTC by Dinesh
Modified: 2014-07-22 09:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh 2014-07-15 10:50:36 UTC
Problem description: 
While opening the docx file LO crashes.

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open saved file in MS Office

Current behavior:
LO crashes while opening docx file

Expected behavior:
LO should able to save the file without crash

              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 bfoman (inactive) 2014-07-15 17:19:35 UTC
Please attach problematic document to allow others to check on different system/build.
Comment 2 Commit Notification 2014-07-21 14:13:28 UTC
dinesh_mp committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c73cb50cdd7dffe809d3e66e5acdfab2bd521f62

fdo#81380: LO crashes while opening the document



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.