fdo#81380: LO crashes while opening the document

LO crashes while opening the document because PropertySet interface
is null and check for this condition was missing, so added the check.

Change-Id: I04dd873ea0923a662e27f9eb2013cde31edc912b
Reviewed-on: https://gerrit.libreoffice.org/10379
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
Tested-by: Luboš Luňák <l.lunak@collabora.com>